gitops/clusters/de/hetzner/cluster/apps/kube-system/hubble-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: gateway
      namespace: envoy-gateway-system
      sectionName: plaintext
    - name: gateway
      namespace: envoy-gateway-system
      sectionName: tls
  hostnames:
    - "hubble.tailb40090.ts.net"
    - "hubble.internal.willpxxr.com"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
